Fix font alignment issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  font-family: Gotham, sans-serif;
+  font-family: Montserrat, sans-serif;
   line-height: 1.5;
   background: rgb(var(--background-rgb));
 }
